Grace/tests/gibbs/errors/t117.grace
// ERROR = P1004
1 2
